--- a/Editor/UI/EditorWindows/Templates/Resources/SubdomainTemplate.uxml
+++ b/Editor/UI/EditorWindows/Templates/Resources/SubdomainTemplate.uxml
@@ -8,6 +8,6 @@
         <ui:Label tabindex="-1" text="https://" display-tooltip-when-elided="true" enable-rich-text="true" style="height: 33px; -unity-font-style: bold; -unity-text-align: middle-left; width: 53px; margin-left: 0;" />
         <ui:TextField picking-mode="Ignore" name="SubdomainField" style="width: 171px; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; height: 24px;" />
         <ui:Label tabindex="-1" text=".readyplayerme" display-tooltip-when-elided="true" enable-rich-text="true" name="Label" style="height: 33px; -unity-font-style: bold; -unity-text-align: middle-left;" />
-        <ui:VisualElement name="ErrorIcon" focusable="false" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); background-image: url(&apos;project://database/Assets/Ready%20Player%20Me/Core/Editor/UI/Visuals/rpm_error_icon.png?fileID=2800000&amp;guid=38a8827f446904c4c802c5b7850e3ff0&amp;type=3#rpm_error_icon&apos;); width: 17px; height: 17px; margin-left: 5px; display: flex; visibility: hidden;" />
+        <ui:VisualElement name="ErrorIcon" focusable="false" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); background-image: resource(&apos;rpm_error_icon&apos;); width: 17px; height: 17px; margin-left: 5px; display: flex; visibility: hidden;" />
     </ui:VisualElement>
 </ui:UXML>
